@@ -43,6 +43,7 @@ since 1999.  If I missed your name, let me know.
 * Jeremy Bouse
 * Adam Bowen
 * Ludo Bosmans
+* Henning Brauer
 * Michael Bunk
 * Daniel Burke
 * Grant Byers
