@@ -11,6 +11,7 @@ Nagios 3.x Change Log
 * Added a bit more verbosity to config verification
 * Fixed bug in logging event handlers
 * Fix to prevent debug output from being shown when Nagios is compiled with embedded Perl interpreter
+* Fix for CPU hogging issues on OpenBSD
 
 
 
